@@ -1,3 +1,20 @@
+/*
+ * Copyright © 2018-2026 Commonwealth Scientific and Industrial Research
+ * Organisation (CSIRO) ABN 41 687 119 230.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package au.csiro.pathling;
 
 import ca.uhn.fhir.rest.server.servlet.ServletRequestDetails;
@@ -11,13 +28,10 @@ import java.util.Objects;
  *
  * @param headerName The header name this instance belongs to.
  * @param acceptedHeaderValues A collection of header values that are deemed valid here (usually
- * synonyms).
+ *     synonyms).
  * @author Felix Naumann
  */
-public record Header(
-    String headerName,
-    List<String> acceptedHeaderValues
-) {
+public record Header(String headerName, List<String> acceptedHeaderValues) {
 
   /**
    * With synonyms there may be one preferred value.
@@ -25,7 +39,7 @@ public record Header(
    * @return The preferred header value.
    */
   public String preferred() {
-    return acceptedHeaderValues().get(0);
+    return acceptedHeaderValues().getFirst();
   }
 
   /**
@@ -34,13 +48,11 @@ public record Header(
    * @param headerValue The header value to test.
    * @return True if valid, false otherwise.
    */
-  public boolean validValue(String headerValue) {
+  public boolean validValue(final String headerValue) {
     if (headerValue == null) {
       return false;
     }
-    List<String> values = Arrays.stream(headerValue.split(","))
-        .map(String::trim)
-        .toList();
+    final List<String> values = Arrays.stream(headerValue.split(",")).map(String::trim).toList();
     // Accept wildcard */* which means the client accepts any content type.
     if (values.contains("*/*")) {
       return true;
@@ -55,7 +67,7 @@ public record Header(
    * @param headerValues The header values to test.
    * @return True if at least one header value valid, false otherwise.
    */
-  public boolean validValue(Collection<String> headerValues) {
+  public boolean validValue(final Collection<String> headerValues) {
     return headerValues != null && headerValues.stream().anyMatch(this::validValue);
   }
 
@@ -64,10 +76,10 @@ public record Header(
    * value is valid.
    *
    * @param request An entire request object. The associated header key will be used to retrieve the
-   * header values.
+   *     header values.
    * @return True if at least one header value valid, false otherwise.
    */
-  public boolean validValue(ServletRequestDetails request) {
+  public boolean validValue(final ServletRequestDetails request) {
     Objects.requireNonNull(request);
     return validValue(request.getHeaders(headerName()));
   }
